force-app/main/default/objects/Reservation__c/Reservation__c.object-meta.xml
<CustomObject>
    <description>Reservation records linking Diners and Restaurants</description>
    <label>Reservation</label>
    <nameField>
        <displayFormat>RES-{000000}</displayFormat>
        <label>Reservation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>