force-app/main/default/objects/Reservation__c/fields/Agent_Assisted__c.field-meta.xml
<CustomField>
    <fullName>Agent_Assisted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if an agent assisted the booking</description>
    <label>Agent Assisted</label>
    <type>Checkbox</type>
</CustomField>