force-app/main/default/objects/Reservation__c/fields/Booking_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Booking_DateTime__c</fullName>
    <description>Reservation booking date/time</description>
    <label>Booking Date/Time</label>
    <type>DateTime</type>
</CustomField>