force-app/main/default/objects/Reservation__c/fields/Completed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Completed_DateTime__c</fullName>
    <label>Completed DateTime</label>
    <type>DateTime</type>
</CustomField>