force-app/main/default/objects/Reservation__c/fields/Confirmation_Code__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Code__c</fullName>
    <description>External confirmation code</description>
    <externalId>true</externalId>
    <label>Confirmation Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>