force-app/main/default/objects/Reservation__c/fields/Diner__c.field-meta.xml
<CustomField>
    <fullName>Diner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to Diner</description>
    <label>Diner</label>
    <referenceTo>Diner__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>