force-app/main/default/objects/Reservation__c/fields/Party_Size__c.field-meta.xml
<CustomField>
    <fullName>Party_Size__c</fullName>
    <description>Number of guests for this reservation</description>
    <label>Party Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>