force-app/main/default/objects/Reservation__c/fields/Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Special_Requests__c</fullName>
    <description>Special requests from the diner</description>
    <label>Special Requests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>