force-app/main/default/objects/Reservation__c/fields/Table_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Table_Assignment__c</fullName>
    <description>Assigned table identifier</description>
    <label>Table Assignment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>